tests/paczka1/fuzzy1/24135054.err
Error in line 2: x0UHCh S228 41,2
Error in line 16: PXmVu S398 32,6
Error in line 8: x0UHCh S567 3,6
Error in line 14: l3ZD4gvn S228 86,3
Error in line 25: x0UHCh S228 k6,5
Error in line 29: D4Mxjr S567 18,7
